[EFL] Fix failure to highlight nodes on web inspector https://bugs.webkit.org/show_bug.cgi?id=100303

Patch by Seokju Kwon <seokju.kwon@samsung.com> on 2012-10-30
Reviewed by Gyuyoung Kim.

It is not working to highlight nodes on web inspector
when using 'Single Backing Store'.
Add code for drawing it if there is the highlighted node.

* ewk/ewk_view_single.cpp:
(_ewk_view_single_smart_repaints_process):

Canonical link: https://commits.webkit.org/118866@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132987 268f45cc-cd09-0410-ab3c-d52691b4dbfc